# Generador-de-horarios-SS

./: README.md  TThorarios.csv  TThorarios.xlsx  data_transform.py  generar_horarios_tt.py  horarios.csv  horarios.xlsx  main.py  muckTThorarios.xlsx  pyproject.toml
