[project]
name = "horarios-tt"
version = "1"
description = "desarrollo para horarios en TT"
authors = [
    {name = "diegochavezo",email = "diegochavor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyqt6 (>=6.8.1,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
